# cli/internal/api/gen.go
@@ -3,9 +3,36 @@
 // Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.8.0 DO NOT EDIT.
 package api
 
+import (
+	"time"
+)
+
 // Error defines model for Error.
 type Error struct {
 	Error string `json:"error"`
+}
+
+// TokenCreateRequest defines model for TokenCreateRequest.
+type TokenCreateRequest struct {
+	Admin *bool  `json:"admin,omitempty"`
+	Name  string `json:"name"`
+}
+
+// TokenCreated defines model for TokenCreated.
+type TokenCreated struct {
+	Admin     bool      `json:"admin"`
+	CreatedAt time.Time `json:"created_at"`
+	Id        string    `json:"id"`
+	Name      string    `json:"name"`
+	Token     string    `json:"token"`
+}
+
+// TokenInfo defines model for TokenInfo.
+type TokenInfo struct {
+	Admin     bool      `json:"admin"`
+	CreatedAt time.Time `json:"created_at"`
+	Id        string    `json:"id"`
+	Name      string    `json:"name"`
 }
 
 // Version defines model for Version.
@@ -20,3 +47,6 @@ type Whoami struct {
 	Admin bool   `json:"admin"`
 	Name  string `json:"name"`
 }
+
+// PostV1TokensJSONRequestBody defines body for PostV1Tokens for application/json ContentType.
+type PostV1TokensJSONRequestBody = TokenCreateRequest
